--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-scripts": "3.0.1",
     "redux": "^4.0.4",
     "redux-form": "^8.2.4",
-    "source-map-explorer": "^2.0.1"
+    "source-map-explorer": "^2.0.1",
+    "yup": "^0.27.0"
   },
   "scripts": {
     "start": "react-scripts start",
